# ieeg_beat_code

./: .gitignore  README.md  config.R  fig1.m  fig2.py  fig3_main.m  fig3_roi_meshes.m  fig3_stim.m  figS1_associative.py  figS1_auditory.py  get_par.m  lut.mat  main.R  main.Rmd  prepare_anat_bipolar.m  preprocessing.m  run_urear.m  utils.py
lib/: acf_whole_brain.m  erp_whole_brain.m  extract_features_acf.m  extract_features_ffr_crossmod.m  extract_features_ffr_sidebands.m  extract_features_fft.m  extract_features_stim_acf.m  extract_features_stim_fft.m  fft_whole_brain.m  figures.R  get_bipolar_from_eleclabels.m  get_fft.m  get_lut_color.m  load_bads.m  prepare_stim.m  preproc_bipolar.m  preproc_car.m  sub_num2str.m  utils.R
lib/UR_EAR2020b/: UR_EAR_2020b.m  XPAttention_pipUREAR.m  fitaudiogram2.m  generate_neurogram_UREAR2.m  manual_UR_EAR_2020b.docx  model_IHC.mexmaci64  model_IHC_BEZ2018.m  model_Synapse.mexmaci64  model_Synapse_BEZ2018.mexmaci64  myNum2str.m  quick_model_plot.m  readme.txt  testANModel.m  uibar.m
lib/UR_EAR2020b/+stimuli/: Noise_in_Notched_Noise.m  SAM_Tone.m  SAM_Tone_residue.m  (+1 more)
lib/ctmr/: ctmr_gauss_plot.m  el_add.m  heschl_load_anatomy.m
lib/img_pipe/: .gitignore  README.md  environment.yml  requirements.txt  setup.cfg
lib/img_pipe/src/img_pipe/: __init__.py  img_pipe.py
lib/img_pipe/src/img_pipe/SupplementalFiles/: colorLUT.py
lib/img_pipe/src/img_pipe/plotting/: ctmr_brain_plot.py  mlab_3D_to_2D.py
lib/img_pipe/src/img_pipe/surface_warping_scripts/: make_outer_surf.py
lib/img_pipe/tests/prototyping/: 3d_to_2d_proj_with_pyvista.py
(+1 files in other folders)
