[metadata]
name = img-pipe-tomo
version = 2022.5.15.1
author = Liberty Hamilton
author_email = libertyhamilton@gmail.com
description = Image processing pipeline for localization and identification of electrodes for electrocorticography
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ChangLabUcsf/img_pipe
project_urls = 
    Bug Tracker = https://github.com/ChangLabUcsf/img_pipe/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent 

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.12
install_requires = 
    mne
    nipy
    PyMCubes
    colorama
    cython

[options.packages.find]
where = src